--- a/public/css/sass/pages/_classes.scss
+++ b/public/css/sass/pages/_classes.scss
@@ -85,11 +85,8 @@
 @media (max-width: 900px) {
 
     .classes-container {
-        padding: 5px;
+        padding: 20px 10px;
 
-        button {
-            margin: 30px 35px 40px 0;
-        }
     }
 
     .class-div {
